<resources>
    <string name="app_name">aero</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">Únete</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="username_card">Uriel Ramírez</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="likenumbercard_card">10 Me Gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondword_detail">Me Gusta</string>
    <string name="titleimagedetail">\"Todo copas en la playa\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="transitionname_picture">transitionnamepicture</string>
    <string name="crear_aeropuerto">Registrar Aeropuerto</string>
    <string name="registrar_avion">Registrar Avion</string>
    <string name="registrar_vuelo">Registrar Vuelo</string>
    <string name="registro_aeropuerto">Registro de Aeropueto</string>
    <string name="nombre_aeropuerto">Nombre De Aropuerto</string>
    <string name="title_activity_maps">Map</string>
    <string name="registro_avion">Registro de Avion</string>
    <string name="modelo_avion">Modelo</string>
    <string name="cantidad_economico">Cantidad de Asientos Economicos</string>
    <string name="cantidad_ejecutiva">Cantidad de Asientos Ejecutivos</string>
    <string name="cantidad_primera">Cantidad de Asientos Primera Clase</string>
    <string name="bonton_guardar">Guardar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="ingrese_modelo">Ingrese Modelo</string>
    <string name="registro_viajes">Registro de Viajes</string>
    <string name="fecha_vuelo">Fecha de Vuelo</string>
    <string name="hora_vuelo">Hora de Vuelo</string>
    <string name="seleccionar_avion">Seleccionar Avion</string>
    <string name="btnBuscar">Buscar</string>
    <string name="despeje">Despeje</string>
    <string name="despeje_aeropuerto">Aeropuerto de Despeje</string>
    <string name="aterrisaje">Aterrisaje</string>
    <string name="despeje_aterrisaje">Aeropuerto de Aterrisaje</string>
    <string name="precio_economico">Precio de Clase Economica</string>
    <string name="precio_primera">Precio Clase Ejecutiva</string>
    <string name="primera_clase">Precio de Primera Clase</string>
    <string name="registro_usuario">Registro de Pasajero</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="nombre">nombre</string>
    <string name="apellido">Apellido</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="edad">Edad</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="ver_vuelos">Ver Vuelos Disponibles</string>
    <string name="Reservar">Reservar</string>
    <string name="primera">Primera</string>
    <string name="Ejecutiva">Ejecutiva</string>
    <string name="Economica">Economica</string>
    <string name="InicioSecion">Inicio de Sesión</string>

</resources>
