<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroViajeActivity">


    <ListView
        android:id="@+id/lista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnPrimera"
        android:layout_marginBottom="3sp"
        >
        a

    </ListView>


    <Button
        android:id="@+id/btnPrimera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/primera"
        android:layout_marginLeft="12sp"
        android:layout_marginBottom="5sp"
        />

    <Button
        android:id="@+id/btnEjecuta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/Ejecutiva"
        android:layout_marginBottom="5sp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/btnEconomica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/Economica"
        android:layout_marginRight="12sp"
        android:layout_marginBottom="5sp"
        android:layout_alignParentEnd="true"
        />
</RelativeLayout>