<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomActivity">

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_vuelo"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="12dp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/reservaAqui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reservar"
        android:layout_alignParentEnd="true"

        android:layout_alignParentTop="true"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="12dp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        />

    <ImageButton
        android:id="@+id/btnReservar"
        android:layout_marginRight="40sp"
        android:layout_marginTop="45sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_plain"
        android:onClick="onReservar"
        android:layout_alignParentEnd="true"
        />
    <TextView
        android:id="@+id/apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/nombre"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/hora_vuelo"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@android:color/holo_orange_dark"
        />
    <TextView
        android:id="@+id/genero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/apellido"
        android:text="Modelo Avion"
        android:layout_marginLeft="12sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        />
    <TextView
        android:id="@+id/fechaCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/nombre"
        android:text="2009-01-01"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="12dp"

        />
    <TextView
        android:id="@+id/horaCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_below="@id/fechaCustom"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:text="15:30:00"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_toEndOf="@id/nombre"
        android:textColor="@android:color/holo_orange_dark"
        />

    <TextView
        android:id="@+id/avionCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/apellido"
        android:text="MR-1222"
        android:layout_marginLeft="12sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_toEndOf="@id/nombre"
        android:textColor="@color/colorAccent"
        />
    <TextView
        android:id="@+id/origen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/genero"
        android:text="@string/despeje"
        android:layout_marginLeft="12sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_light"
        />
    <TextView
        android:id="@+id/despejeCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/genero"
        android:text="San Romero"
        android:layout_marginLeft="12sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_toEndOf="@id/nombre"
        android:textColor="@android:color/holo_green_light"
        />
    <TextView
        android:id="@+id/destino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/despejeCustom"
        android:text="@string/aterrisaje"
        android:layout_marginLeft="12sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@android:color/holo_purple"
        />
    <TextView
        android:id="@+id/destinoCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/despejeCustom"
        android:text="San Romero"
        android:layout_marginLeft="12sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_toEndOf="@id/nombre"
        android:textColor="@android:color/holo_purple"
        />

    <TextView
    android:id="@+id/EconomicaCustom"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/destino"
    android:text="Clase economica $11111"
    android:layout_marginLeft="12sp"
    android:fontFamily="casual"
    android:textStyle="bold"
    android:textColor="@android:color/holo_blue_bright"
    />
    <TextView
        android:id="@+id/ejecutivoCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/destino"
        android:text="Clase economica $11111"
        android:layout_marginLeft="72sp"
        android:fontFamily="casual"
        android:layout_toEndOf="@id/EconomicaCustom"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_light"
        />
    <TextView
        android:id="@+id/primeraCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ejecutivoCustom"
        android:text="Clase economica $11111"
        android:layout_marginLeft="12sp"
        android:fontFamily="casual"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@android:color/holo_orange_dark"
        />

</RelativeLayout>
